# twist-n-sync

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  gradle.properties
.github/workflows/: main-ubuntuAndMacOS.yml  main-windows.yml
app/: build.gradle
app/src/androidTest/java/com/googleresearch/capturesync/: ReadFromFileTests.java  ReceiveDelayTests.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ForUnitTestFile1.csv  ForUnitTestFile2.csv  ForUnitTestFile4.csv  ForUnitTestFile5.csv  ForUnitTestFile6.csv  ForUnitTestFile7.csv
app/src/main/cpp/: CMakeLists.txt  com_googleresearch_capturesync_wrapperJNI.cpp  com_googleresearch_capturesync_wrapperJNI.h
app/src/main/cpp/source/: TimeSync.cpp  TimeSync.h
app/src/main/cpp/source/util/: CubicSpline.cpp  CubicSpline.h  TSUtil.cpp  TSUtil.h
app/src/main/cpp/twist-n-sync-cpp/: LICENSE_TWISTNSYNCMODULE  TimeSync.cpp  TimeSync.h
app/src/main/cpp/twist-n-sync-cpp/util/: CubicSpline.cpp  CubicSpline.h  TSUtil.cpp  TSUtil.h
app/src/main/java/com/googleresearch/capturesync/: CameraController.java  Constants.java  GlobalClass.java  LogToFile.java  MainActivity.java  RawSensorInfo.java  ReadFromFile.java  SoftwareSyncController.java  wrapperJNI.java
app/src/main/java/com/googleresearch/capturesync/softwaresync/: FileDetails.java  FileTransferUtils.java  ImuTimeSync.java  ImuTimeSyncListener.java  SimpleNetworkTimeProtocol.java  SoftwareSyncBase.java  SoftwareSyncClient.java  SoftwareSyncLeader.java  SyncConstants.java  TimeSyncOffsetResponse.java  TimeSyncProtocol.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: default_phaseconfig.json
app/src/main/res/values/: strings.xml
app/src/test/java/: wrapperJNITests.java
gradle/wrapper/: gradle-wrapper.properties
sync-server/: TimeSync.py  environment.yml  server.py
